--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Amirhossein Nazeri"
 title_separator          : "-"
 name                     : &name "Amirhossein Nazeri"
 description              : &description "AI Scientist/Researcher, Data Scientist, Tech Writer"
-url                      : https://prashreet31.github.io/amirhossein.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : "https://amirhnazerii.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "amirhossein.github.io"
 
